--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,11 +1,113 @@
-.sections{
-    transition: .5s;
-    width: auto;
-}
-.sections:hover{
-    background-color: rgba(126, 46, 175, 0.2);
+
+@media screen and (min-width: 1024px) and (max-width: 1300px){
+    header{
+        background-color: #4c4c4caf;
+        width:100%;
+        height: 4em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: sticky;
+        top: 0;
+        margin-top: -41%;
+    }
+
+    .label{
+        font-size: 1.1em;
+    }
+    .logo{
+        width: 10%;
+        margin: 0 15px;
+    }
+    .iniciarSesion{
+        font-family: 'Comfortaa', cursive;
+        font-weight: 800;
+        width: 213px;
+        height: 35px;
+        background-color: #30BFCE;
+        border-radius:5em;
+        border: none;
+        box-shadow: -1px 2px 4px #00000058 ; 
+        transition: .3s;
+        margin: 0 15px;
+    }
+    .iniciarSesion-link{
+        color: white;
+    }
+    .iniciarSesion:hover{
+        background-color: #76ebf8;
+    }
+    .section{
+        margin: 0 20px;
+        height: 100%;
+        flex: 1;
+        transition: .5s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+    }
 }
 
-a{
-    padding: 20px;
+@media screen and (min-width: 1301px){
+    header{
+        background-color: #4c4c4caf;
+        width:100%;
+        height: 4em;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 5px;
+        position: sticky;
+        top: 0;
+        margin-top: -41%;
+    }
+    .label{
+        font-size: 1.1em;
+    }
+    .logo{
+        width: 10%;
+        margin: 0 15px;
+    }
+    .section,
+    .section2,
+    .section3{
+        margin: 0 -3px;
+        height: 100%;
+        flex: 1;
+        transition: .5s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+    }
+    .section:hover{
+        background-color: #30bece7a;
+    }
+    .section2:hover{
+        background-color: #fff70075;
+    }
+    .section3:hover{
+        background-color: #faa41b7a;
+    }
+    .iniciarSesion{
+        font-family: 'Comfortaa', cursive;
+        font-weight: 800;
+        width: 213px;
+        height: 35px;
+        background-color: #30BFCE;
+        color: white;
+        border-radius:5em;
+        border: none;
+        box-shadow: -1px 2px 4px #00000045 ; 
+        transition: .3s;
+        margin: 0 15px;
+    }
+    .iniciarSesion-link{
+        text-decoration: none;
+        color: white;
+    }
+    .iniciarSesion:hover{
+        background-color: #5cd5e3;
+    }
 }
