--- a/src/assets/styles/LandingPage/Header.css
+++ b/src/assets/styles/LandingPage/Header.css
@@ -1,3 +1,53 @@
+header{
+    background-color: #4c4c4caf;
+    width:100%;
+    height: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    margin-bottom: 40%;
+}
+
+.label{
+    font-size: 1.1em;
+}
+.logo{
+    width: 10%;
+    margin: 0 15px;
+}
+.iniciarSesion{
+    font-family: 'Comfortaa', cursive;
+    font-weight: 800;
+    width: 213px;
+    height: 35px;
+    background-color: #30BFCE;
+    border-radius:5em;
+    border: none;
+    box-shadow: -1px 2px 4px #00000058 ; 
+    transition: .3s;
+    margin: 0 15px;
+}
+.iniciarSesion-link{
+    color: white;
+}
+@media screen and (hover:hover){
+    .iniciarSesion:hover{
+        background-color: #76ebf8;
+    }
+}
+
+.section{
+    margin: 0 20px;
+    height: 100%;
+    flex: 1;
+    transition: .5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
 
 @media screen and (min-width: 1024px) and (max-width: 1300px){
     header{
@@ -7,9 +57,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        position: sticky;
+        position: fixed;
         top: 0;
-        margin-top: -41%;
+        margin-bottom: 40%;
     }
 
     .label{
@@ -37,7 +87,9 @@
     .iniciarSesion:hover{
         background-color: #76ebf8;
     }
-    .section{
+    .section,
+    .section2,
+    .section3{
         margin: 0 20px;
         height: 100%;
         flex: 1;
@@ -51,16 +103,17 @@
 
 @media screen and (min-width: 1301px){
     header{
-        background-color: #4c4c4caf;
+        background-color: #00000074;
         width:100%;
         height: 4em;
         display: flex;
         justify-content: space-around;
         align-items: center;
         gap: 5px;
-        position: sticky;
+        position: fixed;
         top: 0;
-        margin-top: -41%;
+        left: 0;
+        transition: .5s;
     }
     .label{
         font-size: 1.1em;
