--- a/src/assets/styles/LandingPage/CarruselImgLandingPage.css
+++ b/src/assets/styles/LandingPage/CarruselImgLandingPage.css
@@ -1,22 +1,11 @@
-@media screen and  (min-width: 1024px) and (max-width: 1300px) {
-    .slider1{
-        width: 22.9%;
-        height: 30%;
-        overflow: hidden;
-    }
-    .carruselImg{
- 
-        padding: 2px 10px;
-    }
+ul{
+    padding: 0 0;
 }
-
 .carruselImg{
-    padding: 2px 10px;
+    padding: 0 2px;
 }
-
 .container20{
-    width: 70%;
-    height: 100%;
+    width:100%;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -24,8 +13,7 @@
     justify-items: center;
 }
 .slider1{
-    width: 22.9%;
-    height: 30%;
+    width: 32%;
     overflow: hidden;
 }
 .slider1 ul{
@@ -42,24 +30,10 @@
     width: 100%;
     height: 100%;
 }
-@keyframes cambio{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
-
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
 
 
 .slider2{
-    width: 42.5%;
-    height: 16em;
+    width: 42.4%;
     overflow: hidden;
 }
 .slider2 ul{
@@ -76,24 +50,11 @@
     width: 100%;
     height: 100%;
 }
-@keyframes cambio{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
 
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
 
 
 .slider3{
     width: 53.5%;
-    height:16em;
     text-align: center;
     overflow: hidden;
 }
@@ -111,57 +72,34 @@
     width: 100%;
     height: 100%;
 }
-@keyframes cambio{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
 
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
 
 
 .slider4{
-    width: 22.3%;
-    height: 10%;
+    padding: 1px 0;
+    width: 24.5%;
     overflow: hidden;
 }
 .slider4 ul{
     display: flex;
     animation: cambio 20s infinite
-    alternate linear;
+    alternate;
     width: 400%;
 }
 .slider4 li{
     width: 100%;
+    height: 100%;
     list-style: none;
 }
 .slider4 img{
     width: 100%;
     height: 100%;
 }
-@keyframes cambio{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
 
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
 
 
 .slider5{
-    width: 44%;
+    width: 51%;
     overflow: hidden;
 }
 .slider5 ul{
@@ -178,25 +116,11 @@
     width: 100%;
     height: 100%;
 }
-@keyframes cambio{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
-
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
 
 
 
 .slider6{
-    width: 31.7%;
-    height: 10%;
+    width: 36%;
     overflow: hidden;
 }
 .slider6 ul{
@@ -213,6 +137,7 @@
     width: 100%;
     height: 100%;
 }
+
 @keyframes cambio{
     0%{margin-left: 0;}
     20%{margin-left: 0;}
