--- a/src/assets/styles/LandingPage/Header.css
+++ b/src/assets/styles/LandingPage/Header.css
@@ -1,12 +1,11 @@
 header{
-    background-color: #00000080;
     width:100%;
     height:5em;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    position: fixed;
     margin-top: -44%;
+    margin-bottom:20%;
 }
 .logo{
     display: none;
@@ -41,8 +40,39 @@ header{
 .section2:hover{
     background-color: #fff70075;
 }
+.iniciarSesion{
+    font-family: 'Comfortaa', cursive;
+    font-weight: 800;
+    width: 213px;
+    height: 35px;
+    background-color: #30BFCE;
+    border-radius:5em;
+    border: none;
+    box-shadow: -1px 2px 4px #00000058 ; 
+    transition: .3s;
+    margin: 0 15px;
+}
 .iniciarSesion-link{
     display: none;
+}
+.iniciarSesion-link-2{
+    margin-left: 35%;
+    width: 100%;
+}
+@media screen and (max-width:700px){
+    .iniciarSesion-link-2{
+        margin-left: 30%;
+    }
+}
+@media screen and (max-width:600px){
+    .iniciarSesion-link-2{
+        margin-left: 28%;
+    }
+}
+@media screen and (max-width:500px){
+    .iniciarSesion-link-2{
+        margin-left: 20%;
+    }
 }
 .section3{
     display: none;
@@ -58,9 +88,8 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-        position: fixed;
         top: 0;
-        margin-top: 0%;
+        margin-top: -43%;
     }
 
     .label{
@@ -84,7 +113,11 @@ header{
         margin: 0 15px;
     }
     .iniciarSesion-link{
+        display: inline;
         color: white;
+    }
+    .iniciarSesion-link-2{
+        display: none;
     }
     .iniciarSesion:hover{
         background-color: #76ebf8;
@@ -116,11 +149,10 @@ header{
         justify-content: space-around;
         align-items: center;
         gap: 5px;
-        position: fixed;
         top: 0;
         left: 0;
         transition: .5s;
-        margin-top: 0%;
+        margin-top: -43%;
 
     }
     .label{
@@ -166,8 +198,12 @@ header{
         margin: 0 15px;
     }
     .iniciarSesion-link{
+        display: inline;
         text-decoration: none;
         color: white;
+    }
+    .iniciarSesion-link-2{
+        display: none;
     }
     .iniciarSesion:hover{
         background-color: #5cd5e3;
