--- a/src/assets/styles/RecuperarContraseña/RecuperarContraseña.css
+++ b/src/assets/styles/RecuperarContraseña/RecuperarContraseña.css
@@ -7,3 +7,73 @@ body{
     overflow-x: hidden;
     margin: 0;
 }
+
+.container-datos-recuperar{
+    margin-top: -6%;
+    background-color: white;
+    position: relative;
+    width: 100%;
+    height: 35em;
+    border-radius: 30px 30px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content-title-recuperar{
+    margin-top: -5%;
+    margin-bottom: 10%;
+    text-align: center;
+}
+.iconPassword{
+    width: 8%;
+    margin-bottom: 2%;
+}
+.retroceder-recuperar{
+    width: 7%;
+}
+.container-recuperar-desk{
+    display: none;
+}
+
+@media screen and (min-width: 1024px){
+    .container-datos-recuperar{
+        display: none;
+    }
+    .container-recuperar-desk{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width:100%;
+        height: 100%;
+    }
+    .recuperar-desk{
+        width: 57%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .recuperar-desk-2{
+        width: 70%;
+        padding: 0px 30px;
+    }
+    .recuperar-desk-logo{
+        background: linear-gradient(90deg, rgba(48, 191, 206, 0.8) 0.29%, rgba(48, 191, 206, 0.6) 50.52%, rgba(48, 191, 206, 0.5) 100%);
+        width: 50%;
+        height: 62.3em;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+    }
+    .extra-desk{
+        border: 10px white solid;
+        width: 70%;
+        padding: 0px 0;
+    }
+    .ir-recuperar-desk{
+        margin-right: -28%;
+        margin-left: 25%;
+        width: 8%;
+    }
+}
+
